[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/UI/HealthUI.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/HeartUIEmpty.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/HeartUIFull.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/DynamicFontRobotoRegular.tres" type="DynamicFont" id=4]

[node name="HealthUI" type="Control"]
margin_right = 100.0
margin_bottom = 12.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 5.0
margin_right = 89.0
margin_bottom = 14.0

[node name="ActualHealth" type="Label" parent="HBoxContainer"]
margin_right = 36.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 4 )
text = "100"

[node name="Separator" type="Label" parent="HBoxContainer"]
margin_left = 40.0
margin_right = 49.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 4 )
text = "/"

[node name="TotalHealth" type="Label" parent="HBoxContainer"]
margin_left = 53.0
margin_right = 89.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 4 )
text = "200"

[node name="HeartUIEmpty" type="TextureRect" parent="."]
visible = false
margin_right = 59.0
margin_bottom = 11.0
texture = ExtResource( 2 )
stretch_mode = 2

[node name="HeartUIFull" type="TextureRect" parent="."]
visible = false
margin_right = 45.0
margin_bottom = 11.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 2
